helm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonar-ingress
  namespace: sonarqube
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
    - host: sonar.mediumcoolaid.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarqube-sonarqube # Replace with name of your service
                port:
                  number: 9000
  tls:
    - hosts:
        - sonar.mediumcoolaid.com
      secretName: sonar-tls
